--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,8 @@ google-auth-oauthlib
 google-api-python-client
 mailchimp3
 hubspot-api-client
+langchain-pinecone
+bcrypt
+cryptography
+redis
+tenacity
