--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-fastapi
-uvicorn
+fastapi==0.68.1
+uvicorn==0.15.0
 langchain
 langchain-openai
 langchain-community
 openai
 pinecone
-python-dotenv
+python-dotenv==0.19.0
 langdetect
 pymongo
-python-multipart
-pydantic
+python-multipart==0.0.5
+pydantic==1.8.2
 requests
 beautifulsoup4
 pypdf
@@ -27,3 +27,6 @@ cryptography
 redis
 tenacity
 stripe
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+PyJWT==2.1.0
