--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ fastapi==0.68.1
 uvicorn==0.15.0
 langchain
 langchain-openai
-python-multipart>=0.0.6
 langchain-community
 openai
 pinecone
@@ -30,11 +29,4 @@ tenacity
 stripe
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-PyJWT==2.1.0==1.7.4
-PyJWT==2.1.0auth
-google-auth-oauthlib
-google-api-python-client
-boto3>=1.28.0
-
-# Payment Integration
-stripe
+PyJWT==2.1.0
