initiate the chat module v1

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-fastapi==0.68.1
-uvicorn==0.15.0
+fastapi>=0.110.0
+uvicorn==0.27.1
 langchain
 langchain-openai
 langchain-community
 openai
 pinecone
-python-dotenv==0.19.0
+python-dotenv==1.0.1
 langdetect
 pymongo
-python-multipart==0.0.5
-pydantic==1.8.2
+python-multipart==0.0.9
+pydantic>=2.0.0
 requests
 beautifulsoup4
 pypdf
@@ -22,11 +22,13 @@ google-api-python-client
 mailchimp3
 hubspot-api-client
 langchain-pinecone
-bcrypt
+bcrypt==4.1.2
 cryptography
 redis
 tenacity
-stripe
+stripe==7.11.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-PyJWT==2.1.0
+PyJWT==2.10.1
+boto3
+fastapi-socketio==0.0.10
