--- a/requirements.txt
+++ b/requirements.txt
@@ -19,13 +19,18 @@ click==8.2.1
 colorama==0.4.6
 cryptography==45.0.6
 dataclasses-json==0.6.7
+distlib==0.3.9
 distro==1.9.0
 Django==5.1.1
 django-cors-headers==4.7.0
+django-filter==25.1
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.116.1
+filelock==3.16.1
 frozenlist==1.7.0
 google-api-core==2.25.1
 google-api-python-client==2.178.0
@@ -77,6 +82,7 @@ passlib==1.7.4
 pinecone==7.3.0
 pinecone-plugin-assistant==1.7.0
 pinecone-plugin-interface==0.0.7
+platformdirs==4.3.6
 pluggy==1.6.0
 promise==2.3
 propcache==0.3.2
@@ -95,7 +101,6 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
 pymongo==4.14.0
-pytz==2024.1
 pyparsing==3.2.3
 pypdf==6.0.0
 pytest==8.4.1
@@ -110,6 +115,7 @@ python-engineio==4.12.2
 python-jose==3.3.0
 python-multipart==0.0.9
 python-socketio==5.11.0
+pytz==2024.1
 PyYAML==6.0.2
 redis==5.0.1
 regex==2025.7.34
@@ -119,6 +125,7 @@ requests-toolbelt==1.0.0
 rich==14.1.0
 rsa==4.9.1
 s3transfer==0.13.1
+setuptools==80.9.0
 simple-websocket==1.1.0
 six==1.17.0
 sniffio==1.3.1
@@ -140,6 +147,8 @@ uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.27.1
 vcrpy==7.0.0
+virtualenv==20.28.0
+wheel==0.45.1
 wrapt==1.17.3
 wsproto==1.2.0
 yarl==1.20.1
