--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ langchain
 langchain-openai
 langchain-community
 openai
-pinecone
+pinecone-client
 python-dotenv==1.0.1
 langdetect
 pymongo
@@ -24,7 +24,7 @@ hubspot-api-client
 langchain-pinecone
 bcrypt==4.1.2
 cryptography
-redis
+redis==5.0.1
 tenacity
 stripe==7.11.0
 python-jose[cryptography]==3.3.0
@@ -32,5 +32,4 @@ passlib[bcrypt]==1.7.4
 PyJWT==2.10.1
 boto3
 python-socketio==5.11.0
-redis==5.0.1
 psutil
