--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,50 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
+      - name: Emergency disk cleanup
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            echo "🚨 EMERGENCY DISK CLEANUP - Server is full!"
+            echo "📊 Disk usage before cleanup:"
+            df -h
+            
+            echo "🧹 Cleaning up everything possible..."
+            
+            # Stop all Docker containers and remove everything
+            sudo docker stop $(sudo docker ps -aq) 2>/dev/null || true
+            sudo docker rm $(sudo docker ps -aq) 2>/dev/null || true
+            sudo docker rmi $(sudo docker images -q) 2>/dev/null || true
+            sudo docker system prune -af --volumes 2>/dev/null || true
+            sudo docker builder prune -af 2>/dev/null || true
+            
+            # Clean package cache
+            sudo apt-get autoremove -y 2>/dev/null || true
+            sudo apt-get autoclean 2>/dev/null || true
+            sudo apt-get clean 2>/dev/null || true
+            
+            # Clean temporary files
+            sudo rm -rf /tmp/* 2>/dev/null || true
+            sudo rm -rf /var/tmp/* 2>/dev/null || true
+            sudo rm -rf /var/log/*.log 2>/dev/null || true
+            sudo rm -rf /var/log/*.gz 2>/dev/null || true
+            
+            # Clean old kernels
+            sudo apt-get autoremove --purge -y 2>/dev/null || true
+            
+            # Clean home directory
+            rm -rf ~/.cache/* 2>/dev/null || true
+            rm -rf ~/.npm/* 2>/dev/null || true
+            
+            echo "📊 Disk usage after cleanup:"
+            df -h
+            
+            echo "🔍 Finding largest directories:"
+            sudo du -h --max-depth=1 / 2>/dev/null | sort -hr | head -10 || true
+
       - name: Create app directory on server
         uses: appleboy/ssh-action@v1.2.0
         with:
@@ -59,14 +103,21 @@ jobs:
           script: |
             echo "📁 Creating app directory..."
             echo "Target directory: ${{ secrets.APP_DIR }}"
-            sudo mkdir -p ${{ secrets.APP_DIR }}
-            sudo chown -R ${{ secrets.SSH_USER }}:${{ secrets.SSH_USER }} ${{ secrets.APP_DIR }}
-            sudo chmod 755 ${{ secrets.APP_DIR }}
-            echo "✅ Directory created: ${{ secrets.APP_DIR }}"
-            ls -la $(dirname ${{ secrets.APP_DIR }})
+            
+            # Try to create directory in /tmp first (usually has more space)
+            TEMP_DIR="/tmp/chatbot-app"
+            echo "Using temporary directory: $TEMP_DIR"
+            
+            sudo mkdir -p $TEMP_DIR
+            sudo chown -R ${{ secrets.SSH_USER }}:${{ secrets.SSH_USER }} $TEMP_DIR
+            sudo chmod 755 $TEMP_DIR
+            
+            echo "✅ Temporary directory created: $TEMP_DIR"
             echo "Current user: $(whoami)"
             echo "Directory permissions:"
-            ls -la ${{ secrets.APP_DIR }}
+            ls -la $TEMP_DIR
+            echo "📊 Available space:"
+            df -h $TEMP_DIR
 
       - name: Clone repo on server
         uses: appleboy/ssh-action@v1.2.0
@@ -77,18 +128,23 @@ jobs:
           script: |
             echo "📥 Cloning repository directly on server..."
             echo "Repository: ${{ github.server_url }}/${{ github.repository }}.git"
-            echo "Target directory: ${{ secrets.APP_DIR }}"
+            
+            # Use temporary directory
+            TEMP_DIR="/tmp/chatbot-app"
+            echo "Target directory: $TEMP_DIR"
             
             # Remove existing directory if it exists
-            sudo rm -rf ${{ secrets.APP_DIR }}
+            sudo rm -rf $TEMP_DIR
             
             # Clone the repository
-            git clone https://github.com/${{ github.repository }}.git ${{ secrets.APP_DIR }}
+            git clone https://github.com/${{ github.repository }}.git $TEMP_DIR
             
             # Set proper ownership
-            sudo chown -R ${{ secrets.SSH_USER }}:${{ secrets.SSH_USER }} ${{ secrets.APP_DIR }}
+            sudo chown -R ${{ secrets.SSH_USER }}:${{ secrets.SSH_USER }} $TEMP_DIR
             
             echo "✅ Repository cloned successfully"
+            echo "📊 Disk usage after clone:"
+            df -h
 
       - name: Verify clone and checkout latest
         uses: appleboy/ssh-action@v1.2.0
@@ -98,7 +154,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             echo "🔍 Verifying repository clone..."
-            cd ${{ secrets.APP_DIR }}
+            TEMP_DIR="/tmp/chatbot-app"
+            cd $TEMP_DIR
             echo "Current directory: $(pwd)"
             echo "Git status:"
             git status
@@ -118,7 +175,8 @@ jobs:
           script: |
             set -e
             echo "🚀 Starting deployment..."
-            cd ${{ secrets.APP_DIR }}
+            TEMP_DIR="/tmp/chatbot-app"
+            cd $TEMP_DIR
 
             # Start Docker service
             echo "🐳 Starting Docker service..."
