--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ redis==5.0.1
 PyJWT==2.10.1
 beautifulsoup4
 psutil
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
+python-jose[cryptography]==3.3.0
+cryptography
