Add MongoDB and Redis services - fix database connection issues

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -308,8 +308,20 @@ jobs:
             echo "🚀 Starting containers..."
             $DC up -d
 
-            # Wait for service to be ready
-            echo "⏳ Waiting for service to start..."
+            # Wait for MongoDB and Redis to be ready
+            echo "⏳ Waiting for MongoDB and Redis to start..."
+            sleep 15
+            
+            # Check if MongoDB is ready
+            echo "🔍 Checking MongoDB status..."
+            sudo docker exec chatbot-mongodb mongosh --eval "db.adminCommand('ping')" || echo "MongoDB not ready yet"
+            
+            # Check if Redis is ready
+            echo "🔍 Checking Redis status..."
+            sudo docker exec chatbot-redis redis-cli ping || echo "Redis not ready yet"
+            
+            # Wait for web service to be ready
+            echo "⏳ Waiting for web service to start..."
             sleep 10
 
             # Verify containers are running
