--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,55 @@ services:
       - "8000:8000"
     environment:
       - ENVIRONMENT=production
+      - MONGODB_URL=mongodb://mongodb:27017/chatbot_db
+      - REDIS_URL=redis://redis:6379/0
     volumes:
       - ./uploads:/app/uploads
       - ./logs:/app/logs
+    depends_on:
+      - mongodb
+      - redis
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/ping"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
+
+  mongodb:
+    image: mongo:7.0
+    container_name: chatbot-mongodb
+    restart: unless-stopped
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password123
+      - MONGO_INITDB_DATABASE=chatbot_db
+    volumes:
+      - mongodb_data:/data/db
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  redis:
+    image: redis:7.2-alpine
+    container_name: chatbot-redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+volumes:
+  mongodb_data:
+  redis_data:
