--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -278,16 +278,38 @@ jobs:
             echo "⏹️ Stopping existing containers..."
             $DC down || true
 
-            # Kill any process using port 8000
-            echo "🔌 Checking for processes using port 8000..."
+            # Kill any processes using ports 8000, 27017, 6379
+            echo "🔌 Checking for processes using ports 8000, 27017, 6379..."
+            
+            # Kill port 8000
             PORT_PID=$(sudo lsof -t -i:8000 2>/dev/null || echo "")
             if [ ! -z "$PORT_PID" ]; then
               echo "Found process $PORT_PID using port 8000, killing it..."
               sudo kill -9 $PORT_PID || true
-              sleep 2
-            else
-              echo "Port 8000 is free"
             fi
+            
+            # Kill port 27017 (MongoDB)
+            MONGODB_PID=$(sudo lsof -t -i:27017 2>/dev/null || echo "")
+            if [ ! -z "$MONGODB_PID" ]; then
+              echo "Found process $MONGODB_PID using port 27017, killing it..."
+              sudo kill -9 $MONGODB_PID || true
+            fi
+            
+            # Kill port 6379 (Redis)
+            REDIS_PID=$(sudo lsof -t -i:6379 2>/dev/null || echo "")
+            if [ ! -z "$REDIS_PID" ]; then
+              echo "Found process $REDIS_PID using port 6379, killing it..."
+              sudo kill -9 $REDIS_PID || true
+            fi
+            
+            # Stop any existing Redis/MongoDB services
+            echo "🛑 Stopping existing Redis and MongoDB services..."
+            sudo systemctl stop redis-server 2>/dev/null || true
+            sudo systemctl stop mongod 2>/dev/null || true
+            sudo systemctl stop redis 2>/dev/null || true
+            sudo systemctl stop mongodb 2>/dev/null || true
+            
+            sleep 3
 
             # Remove any existing containers with the same name
             echo "🗑️ Removing any existing chatbot-backend containers..."
@@ -311,15 +333,15 @@ jobs:
             # Wait for MongoDB and Redis to be ready
             echo "⏳ Waiting for MongoDB and Redis to start..."
             sleep 15
-            
+
             # Check if MongoDB is ready
             echo "🔍 Checking MongoDB status..."
             sudo docker exec chatbot-mongodb mongosh --eval "db.adminCommand('ping')" || echo "MongoDB not ready yet"
-            
+
             # Check if Redis is ready
             echo "🔍 Checking Redis status..."
             sudo docker exec chatbot-redis redis-cli ping || echo "Redis not ready yet"
-            
+
             # Wait for web service to be ready
             echo "⏳ Waiting for web service to start..."
             sleep 10
