--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,13 @@ passlib[bcrypt]==1.7.4
 bcrypt==4.1.2
 python-jose[cryptography]==3.3.0
 cryptography
+click
+langchain
+langchain-openai
+langchain-community
+langchain-pinecone
+pinecone
+python-socketio
+boto3
+langdetect
+stripe
