--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - .env
+      - ./.env
+    # other keys...
     environment:
       - ENVIRONMENT=production
       - REDIS_HOST=redis
